force-app/main/default/objects/Supplier_Product_Capacity__c/fields/Monthly_Capacity_Units__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Capacity_Units__c</fullName>
    <label>Monthly Capacity (Units)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>