force-app/main/default/objects/Supplier_Product_Capacity__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipLabel>Supplier Product Capacity</relationshipLabel>
    <relationshipName>Supplier_Product_Capacity</relationshipName>
    <type>Lookup</type>
</CustomField>