force-app/main/default/objects/Supplier_Product_Capacity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Supplier__c</columns>
    <columns>Monthly_Capacity_Units__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>